// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/test/annotation/task.test.ts test task decorator 1`] = `
Array [
  Object {
    "name": "CustomFramework",
    "options": Object {
      "repeat": Object {
        "cron": "0 * * * * *",
      },
    },
    "propertyKey": "runTask",
    "value": [Function],
  },
]
`;

exports[`/test/annotation/task.test.ts test task decorator 2`] = `
Array [
  Object {
    "options": "0 * * * * *",
    "propertyKey": "runLocalTask",
    "value": [Function],
  },
]
`;

exports[`/test/annotation/task.test.ts test task decorator 3`] = `undefined`;
